amount function adding done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -457,7 +457,7 @@
                             </div>
                         </div>
                         <div class="gr-box gr-box-23 flex" style="grid-area: item-23;">
-                            Rupees TwentyFour Thousand Nine Hundred Ninety Only
+                            Rupees {{amountInWords}} Only
                         </div>
                         <div class="gr-box gr-box-24 flex" style="grid-area: item-24;">
                             <div class="top flex">
