amount function bug fixing done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -443,7 +443,7 @@
                             </div>
                             <div class="right flex">
                                 <div>{{invoice.DiscountTotal}}</div>
-                                <div>{{invoice.interMediateTotal}}</div>
+                                <div>{{invoice.initialTotal}}</div>
                                 <div>{{invoice.GST}}</div>
                                 <div>{{invoice.GST}}</div>
                             </div>
