ui changes done

--- a/invoice_dashboard.html
+++ b/invoice_dashboard.html
@@ -325,7 +325,8 @@
                 </div>
             </div>
             <div class="main-body p-3">
-                <div class="row bg-white flex mb-2 p-3" style="border-radius: 5px;margin:0px;">
+                <div class="row bg-white flex mb-2 p-3"
+                    style="border-radius: 5px;margin:0px;min-width: 100%;max-width: 966px;overflow-x: auto;">
                     <div id="ReportPage" class="box p-0">
                         <div class="gr-box gr-box-1 flex" style="grid-area: item-1">
                             <div class="heading">
